k8s/immich/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
  namespace: immich
spec:
  parentRefs:
    - name: internal-gateway
      namespace: default
    - name: external-gateway
      namespace: default
  hostnames:
    - "immich.fresh96jwjw.org"
    - "immich.local.fresh96jwjw.org"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: immich-server
          port: 2283
